remove scrollbar and settle a bug

--- a/src/common/less/base.less
+++ b/src/common/less/base.less
@@ -1,6 +1,6 @@
 @import "./variable.less";
 
-@timeout: 300ms;
+@timeout: 200ms;
 
 html {
   font-size: 16px;
