--- a/src/common/less/reset.less
+++ b/src/common/less/reset.less
@@ -3,6 +3,9 @@
   padding: 0;
   line-height: 1.2;
   box-sizing: border-box;
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 li {
